--- a/client/node-sprint/src/index.css
+++ b/client/node-sprint/src/index.css
@@ -1,5 +1,8 @@
 body {
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
   font-family: sans-serif;
+  background-image: url(https://images7.alphacoders.com/325/325912.jpg)
+
+  
 }
